# SecureRelief

./: package-lock.json  package.json
app/: providers.tsx
app/api/auth/login/: route.ts
app/login/: page.tsx
components/auth/: RoleGuard.tsx
components/landing/: Hero.tsx
components/shared/: DevToolbar.tsx  Navbar.tsx
context/: AuthContext.tsx
contracts/: Cargo.toml
contracts/src/: lib.rs  state.rs  tests.rs  types.rs
contracts/src/modules/: mod.rs  oracle_mcp.rs  registries.rs  token.rs  treasury.rs  utils.rs  voucher.rs
frontend/: next.config.ts  tailwind.config.js  tsconfig.json  vite.config.js  web3Store.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/disaster/: page.tsx
frontend/app/donate/: page.tsx
frontend/app/government/: page.tsx
frontend/app/login/: page.tsx
frontend/app/oracle/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/proof/: page.tsx
frontend/app/register/: page.tsx
frontend/app/transparency/: page.tsx
frontend/app/treasury/: page.tsx
frontend/app/victim/: page.tsx
frontend/components/: Providers.tsx
frontend/components/Admin/: NewDisasterZone.tsx  SystemSettings.tsx  VendorManagement.tsx
frontend/components/Auth/: RoleGuard.tsx
frontend/components/UI/: AccessibleModal.tsx  OptimizedImage.tsx  Toast.tsx
frontend/components/Web3/: NetworkStatus.tsx
frontend/hooks/: useAccessibility.ts  useContract.ts
frontend/utils/: codeSplitting.tsx
lib/: auth.ts
lib/services/: auth.service.ts
prisma/migrations/20260117122510_init/: migration.sql
(+6 files in other folders)
